<resources>
    <string name="app_name">BinarySearchTree</string>
    <string name="add_text">Add</string>
    <string name="remove_text">Remove</string>
    <string name="current_tree_text">Current tree</string>
    <string name="search_hint">Search in tree...</string>
    <string name="search_image_description">Search</string>
    <string name="min_text">Show min</string>
    <string name="max_text">Show max</string>
    <string name="found_text">Found: %1$s</string>
    <string name="not_found_text">Not found: %1$s</string>
    <string name="min">Min: %1$s</string>
    <string name="max">Max: %1$s</string>
</resources>
