<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.elena.binarysearchtree.MainActivity">

    <EditText
        android:id="@+id/edit_search"
        android:inputType="number"
        android:layout_width="0dp"
        android:textSize="20sp"
        android:hint="@string/search_hint"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/search_image"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp" />
    <ImageView
        android:onClick="onSearchImageClick"
        android:contentDescription="@string/search_image_description"
        android:id="@+id/search_image"
        android:src="@drawable/ic_search_black_24dp"
        android:tint="@color/colorPrimary"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_search"
        app:layout_constraintRight_toLeftOf="@+id/found_text"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="@+id/edit_search"
        app:layout_constraintVertical_bias="0.4" />
    <TextView
        android:id="@+id/found_text"
        tools:text="Not found."
        android:textSize="20sp"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/edit_search"
        app:layout_constraintTop_toTopOf="@+id/edit_search"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/current_tree_text"
        android:textSize="25sp"
        android:text="@string/current_tree_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_search" />
    <HorizontalScrollView
        android:id="@+id/scroll_tree"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="@+id/edit_search"
        app:layout_constraintRight_toRightOf="@+id/found_text"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/current_tree_text">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </HorizontalScrollView>


    <Button
        android:onClick="onMinButtonClick"
        android:background="@color/colorAccent"
        android:id="@+id/button_min"
        android:textSize="20sp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:text="@string/min_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintLeft_toLeftOf="@+id/scroll_tree"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/scroll_tree" />

    <Button
        android:onClick="onMaxButtonClick"
        android:background="@color/colorAccent"
        android:id="@+id/button_max"
        android:text="@string/max_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintRight_toRightOf="@+id/scroll_tree"
        app:layout_constraintLeft_toRightOf="@+id/button_min"
        app:layout_constraintBottom_toBottomOf="@+id/button_min"
        app:layout_constraintTop_toTopOf="@+id/button_min" />
    <HorizontalScrollView
        app:layout_constraintLeft_toLeftOf="@+id/button_min"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/button_min"
        app:layout_constraintRight_toRightOf="@+id/button_min"
        android:id="@+id/scroll_min"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/min_text"
            tools:text="Min:\n10000000000"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
    </HorizontalScrollView>
    <HorizontalScrollView
        app:layout_constraintLeft_toLeftOf="@+id/button_max"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/button_max"
        app:layout_constraintRight_toRightOf="@+id/button_max"
        android:id="@+id/scroll_max"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/max_text"
            tools:text="Max:\n10000000000"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
    </HorizontalScrollView>

    <android.support.design.widget.FloatingActionButton
        android:src="@drawable/ic_add_black_24dp"
        android:elevation="5dp"
        android:id="@+id/fab_add"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
